--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 gap-2 mt-lg-0 mt-4">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
@@ -60,7 +58,7 @@
               <a class="nav-link" href="#">Photo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -68,35 +66,122 @@
     </nav>
     <!-- END OF REGION  -->
 
-        <!-- START OF REGION FOOTER SECTION -->
-        <footer class="">
-            <div class="container py-5">
-              <div class="footerConten row mb-4">
-                <div class="searchSection position-relative col-md-8 g-0">
+    <!-- START OF REGION CONTACT SECTION -->
+    <section class="contactSection py-5">
+      <div class="container">
+        <div
+          class="navigation rounded-pill align-items-center text-white d-flex"
+        >
+          <h5 class="fs-6 fw-lighter py-3 ps-4">
+            <a class="" href="index.html">home</a>
+          </h5>
+          <i class="fa-solid fa-arrow-right-long pb-2 mx-3"></i>
+          <h5 class="fs-6 fw-lighter py-3">Contact</h5>
+        </div>
+
+        <div class="row justify-content-between py-5">
+          <div class="col-lg-5 ms-5 rounded-5">
+            <div class="align-items-end text-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+              laudantium expedita quis dolores alias dolor culpa id, autem nihil
+              molestiae vel labore numquam pariatur aspernatur magni nemo
+              asperiores qui consectetur.
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h5 class="display-6 text-white">Contact us</h5>
+            <p class="text-white">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi
+              consectetur inventore ducimus, facilis, numquam id soluta omnis
+              eius recusandae nesciunt vero repellat harum cum. Nisi facilis
+              odit hic, ipsum sed!
+            </p>
+            <form>
+              <div class="row gy-3">
+                <div class="col-lg-6">
                   <input
                     type="text"
-                    id="search"
+                    name="userName"
+                    id="user-name"
+                    placeholder="Your Name......"
                     class="form-control text-white"
-                    placeholder="Enter Email To Subscribe...."
                   />
-                  <button class="form-search-button btn rounded-pill px-4 py-2">
-                    Subscribe
-                  </button>
                 </div>
-                <div class="social-links col-md-4 text-md-end mt-md-0 mt-3 ">
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-google-plus"></i>
-                  <i class="fa-brands fa-pinterest-p"></i>
+                <div class="col-lg-6">
+                  <input
+                    type="email"
+                    name="userEmail"
+                    id="user-email"
+                    placeholder="Email address"
+                    class="form-control text-white"
+                  />
                 </div>
+                <div class="col-lg-6">
+                  <input
+                    type="email"
+                    name="userEmail"
+                    id="user-email"
+                    placeholder="Company Name"
+                    class="form-control text-white"
+                  />
+                </div>
+                <div class="col-lg-6">
+                  <input
+                    type="email"
+                    name="userEmail"
+                    id="user-email"
+                    placeholder="Website"
+                    class="form-control text-white"
+                  />
+                </div>
+                <div class="col-12">
+                  <textarea
+                    name="userMessage"
+                    id="user-message"
+                    placeholder="Message"
+                    class="form-control"
+                  ></textarea>
+                </div>
+                <button class="btn bg-info w-auto px-4 ms-auto me-3">
+                  Sumbit
+                </button>
               </div>
-              <p>
-                Copyright 2014 Company name. Designed by Themezy. All rights reserved
-              </p>
-              </div>
-            </div>
-          </footer>
-          <!-- END OF REGION  -->
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END OF REGION -->
+
+    <!-- START OF REGION FOOTER SECTION -->
+    <footer class="">
+      <div class="container py-5">
+        <div class="footerConten row mb-4">
+          <div class="searchSection position-relative col-md-8 g-0">
+            <input
+              type="text"
+              id="search"
+              class="form-control text-white"
+              placeholder="Enter Email To Subscribe...."
+            />
+            <button class="form-search-button btn rounded-pill px-4 py-2">
+              Subscribe
+            </button>
+          </div>
+          <div class="social-links col-md-4 text-md-end mt-md-0 mt-3">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-google-plus"></i>
+            <i class="fa-brands fa-pinterest-p"></i>
+          </div>
+        </div>
+        <p>
+          Copyright 2014 Company name. Designed by Themezy. All rights reserved
+        </p>
+      </div>
+    </footer>
+    <!-- END OF REGION  -->
+
     <!-- Bootstrap Js path -->
     <script src="JS/bootstrap.bundle.min.js"></script>
     <!-- Main Js path -->
