--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- App Icon -->
+    <link rel="shortcut icon" href="imgs/logo.png" />
     <!-- Bootstrsp path -->
     <link rel="stylesheet" href="CSS/bootstrap.min.css" />
     <!-- Font Awesome path -->
     <link rel="stylesheet" href="CSS/all.min.css" />
     <!-- CSS path -->
     <link rel="stylesheet" href="CSS/main.css" />
-    <title>Document</title>
+    <title>Weather</title>
   </head>
   <body>
     <!-- START OF REGION NAVBAR SECTION -->
@@ -58,7 +60,7 @@
               <a class="nav-link" href="#">Photo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link active" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -70,13 +72,13 @@
     <section class="contactSection py-5">
       <div class="container">
         <div
-          class="navigation rounded-pill align-items-center text-white d-flex"
+          class="navigation rounded-pill text-white d-flex pt-4 pb-3 align-content-center"
         >
-          <h5 class="fs-6 fw-lighter py-3 ps-4">
+          <h5 class="fs-6 fw-lighter ps-4 accordion-collapse fw-bolder">
             <a class="" href="index.html">home</a>
           </h5>
-          <i class="fa-solid fa-arrow-right-long pb-2 mx-3"></i>
-          <h5 class="fs-6 fw-lighter py-3">Contact</h5>
+          <i class="fa-solid fa-arrow-right-long mx-3 pt-1"></i>
+          <h5 class="fs-6 fw-lighter">Contact</h5>
         </div>
 
         <div class="row justify-content-between py-5">
