--- a/index.html
+++ b/index.html
@@ -91,6 +91,82 @@
     </section>
     <!-- END OF REGION -->
 
+    <!-- START OF RAGION WEATHER INFO -->
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div id="dayOne">
+            <div class="bg-danger p-3 rounded-3">
+              <div class="head d-flex justify-content-between">
+                <h6>Saturday</h6>
+                <h6>6January</h6>
+              </div>
+              <h6>cairo</h6>
+              <div
+                class="degre d-flex justify-content-around align-items-center"
+              >
+                <h3>21 °C</h3>
+                <img src="imgs/116.webp" alt="cloude" />
+              </div>
+              <div class="d-flex justify-content-evenly align-items-center">
+                <div>
+                  <img src="imgs/icon-umberella.png" alt="umberella" />
+                  <span>20%</span>
+                </div>
+                <div>
+                  <img src="imgs/icon-wind.png" alt="wind" />
+                  <span>18km</span>
+                </div>
+                <div>
+                  <img src="imgs/icon-compass.png" alt="compass" />
+                  <span>East</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div id="dayTow">
+            <div class="bg-danger p-3 rounded-3">
+              <div class="head d-flex justify-content-between">
+                <h6>Saturday</h6>
+                <h6>6January</h6>
+              </div>
+
+              <div
+                class="degre d-flex flex-column justify-content-between align-items-center"
+              >
+                <img src="imgs/113.webp" alt="cloude" class="w-25" />
+                <h3>21 °C</h3>
+                <span>Sunny</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div id="dayTow">
+            <div class="bg-danger p-3 rounded-3">
+              <div class="head d-flex justify-content-between">
+                <h6>Saturday</h6>
+                <h6>6January</h6>
+              </div>
+
+              <div
+                class="degre d-flex flex-column justify-content-between align-items-center"
+              >
+                <img src="imgs/113.webp" alt="cloude" class="w-25" />
+                <h3>21 °C</h3>
+                <span>Sunny</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF RAGION -->
+
     <!-- START OF REGION FOOTER SECTION -->
     <footer class="">
       <div class="container py-5">
