--- a/index.html
+++ b/index.html
@@ -70,102 +70,119 @@
     </nav>
     <!-- END OF REGION  -->
 
-    <!-- START OF REGION INPUT SECTION -->
-    <section class="input-from">
-      <div class="container py-5">
-        <div class="searchContainer position-relative">
-          <input
-            type="text"
-            id="search"
-            class="form-control text-white rounded-pill"
-            placeholder="Find your location...."
-          />
-          <button
-            id="findMe"
-            class="form-search-button btn rounded-pill px-4 py-2"
-          >
-            Find Me
-          </button>
+    <div class="generalDiv">
+      <!-- START OF REGION INPUT SECTION -->
+      <section class="input-from">
+        <div class="container py-5">
+          <div class="searchContainer position-relative">
+            <input
+              type="text"
+              id="search"
+              class="form-control text-white rounded-pill"
+              placeholder="Find your location...."
+            />
+            <button
+              id="findMe"
+              class="form-search-button btn rounded-pill px-4 py-2"
+            >
+              Find Me
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- END OF REGION -->
+
+      <!-- START OF RAGION WEATHER INFO -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div
+              id="dayOne"
+              class="text-white overflow-auto rounded-4 my-3 days h-100"
+            >
+              <div>
+                <div class="head d-flex justify-content-between text-white p-3">
+                  <h6>Saturday</h6>
+                  <h6>6January</h6>
+                </div>
+
+                <h4 class="p-4 city">cairo</h4>
+                <div
+                  class="degre d-flex justify-content-around align-items-center py-2"
+                >
+                  <h3>21 °C</h3>
+                  <img src="imgs/116.webp" alt="cloude" />
+                </div>
+                <span class="ps-5 pt-2">Partly cloudy</span>
+                <div
+                  class="d-flex justify-content-evenly align-items-center py-5"
+                >
+                  <div>
+                    <img src="imgs/icon-umberella.png" alt="umberella" />
+                    <span>20%</span>
+                  </div>
+                  <div>
+                    <img src="imgs/icon-wind.png" alt="wind" />
+                    <span>18km</span>
+                  </div>
+                  <div>
+                    <img src="imgs/icon-compass.png" alt="compass" />
+                    <span>East</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div
+              id="dayTow"
+              class="text-white overflow-auto rounded-4 my-3 days h-100"
+            >
+              <div>
+                <div class="head d-flex justify-content-between text-white p-3">
+                  <h6>Saturday</h6>
+                  <h6>6January</h6>
+                </div>
+
+                <div
+                  class="degre d-flex flex-column justify-content-between align-items-center"
+                >
+                  <img src="imgs/113.webp" alt="cloude" class="w-25 py-3" />
+                  <h3>21 °C</h3>
+                  <h5 class="pt-4">21 °C</h5>
+                  <span class="py-4">Sunny</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div
+              id="dayThree"
+              class="text-white overflow-auto rounded-4 my-3 days h-100"
+            >
+              <div>
+                <div class="head d-flex justify-content-between text-white p-3">
+                  <h6>Saturday</h6>
+                  <h6>6January</h6>
+                </div>
+
+                <div
+                  class="degre d-flex flex-column justify-content-between align-items-center"
+                >
+                  <img src="imgs/113.webp" alt="cloude" class="w-25 py-3" />
+                  <h3>21 °C</h3>
+                  <h5 class="pt-4">21 °C</h5>
+                  <span class="py-4">Sunny</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
-    <!-- END OF REGION -->
-
-    <!-- START OF RAGION WEATHER INFO -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div id="dayOne">
-            <div class="bg-danger p-3 rounded-3">
-              <div class="head d-flex justify-content-between">
-                <h6>Saturday</h6>
-                <h6>6January</h6>
-              </div>
-              <h6>cairo</h6>
-              <div
-                class="degre d-flex justify-content-around align-items-center"
-              >
-                <h3>21 °C</h3>
-                <img src="imgs/116.webp" alt="cloude" />
-              </div>
-              <div class="d-flex justify-content-evenly align-items-center">
-                <div>
-                  <img src="imgs/icon-umberella.png" alt="umberella" />
-                  <span>20%</span>
-                </div>
-                <div>
-                  <img src="imgs/icon-wind.png" alt="wind" />
-                  <span>18km</span>
-                </div>
-                <div>
-                  <img src="imgs/icon-compass.png" alt="compass" />
-                  <span>East</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div id="dayTow">
-            <div class="bg-danger p-3 rounded-3">
-              <div class="head d-flex justify-content-between">
-                <h6>Saturday</h6>
-                <h6>6January</h6>
-              </div>
-
-              <div
-                class="degre d-flex flex-column justify-content-between align-items-center"
-              >
-                <img src="imgs/113.webp" alt="cloude" class="w-25" />
-                <h3>21 °C</h3>
-                <span>Sunny</span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div id="dayTow">
-            <div class="bg-danger p-3 rounded-3">
-              <div class="head d-flex justify-content-between">
-                <h6>Saturday</h6>
-                <h6>6January</h6>
-              </div>
-
-              <div
-                class="degre d-flex flex-column justify-content-between align-items-center"
-              >
-                <img src="imgs/113.webp" alt="cloude" class="w-25" />
-                <h3>21 °C</h3>
-                <span>Sunny</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- END OF RAGION -->
     </div>
-    <!-- END OF RAGION -->
 
     <!-- START OF REGION FOOTER SECTION -->
     <footer class="">
