--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               id="search"
               class="form-control text-white rounded-pill"
               placeholder="Find your location...."
-            />
+              />
             <button
               id="findMe"
               class="form-search-button btn rounded-pill px-4 py-2"
@@ -94,91 +94,8 @@
 
       <!-- START OF RAGION WEATHER INFO -->
       <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <div
-              id="dayOne"
-              class="text-white overflow-auto rounded-4 my-3 days h-100"
-            >
-              <div>
-                <div class="head d-flex justify-content-between text-white p-3">
-                  <h6>Saturday</h6>
-                  <h6>6January</h6>
-                </div>
-
-                <h4 class="p-4 city">cairo</h4>
-                <div
-                  class="degre d-flex justify-content-around align-items-center py-2"
-                >
-                  <h3>21 °C</h3>
-                  <img src="imgs/116.webp" alt="cloude" />
-                </div>
-                <span class="ps-5 pt-2">Partly cloudy</span>
-                <div
-                  class="d-flex justify-content-evenly align-items-center py-5"
-                >
-                  <div>
-                    <img src="imgs/icon-umberella.png" alt="umberella" />
-                    <span>20%</span>
-                  </div>
-                  <div>
-                    <img src="imgs/icon-wind.png" alt="wind" />
-                    <span>18km</span>
-                  </div>
-                  <div>
-                    <img src="imgs/icon-compass.png" alt="compass" />
-                    <span>East</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div
-              id="dayTow"
-              class="text-white overflow-auto rounded-4 my-3 days h-100"
-            >
-              <div>
-                <div class="head d-flex justify-content-between text-white p-3">
-                  <h6>Saturday</h6>
-                  <h6>6January</h6>
-                </div>
-
-                <div
-                  class="degre d-flex flex-column justify-content-between align-items-center"
-                >
-                  <img src="imgs/113.webp" alt="cloude" class="w-25 py-3" />
-                  <h3>21 °C</h3>
-                  <h5 class="pt-4">21 °C</h5>
-                  <span class="py-4">Sunny</span>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div
-              id="dayThree"
-              class="text-white overflow-auto rounded-4 my-3 days h-100"
-            >
-              <div>
-                <div class="head d-flex justify-content-between text-white p-3">
-                  <h6>Saturday</h6>
-                  <h6>6January</h6>
-                </div>
-
-                <div
-                  class="degre d-flex flex-column justify-content-between align-items-center"
-                >
-                  <img src="imgs/113.webp" alt="cloude" class="w-25 py-3" />
-                  <h3>21 °C</h3>
-                  <h5 class="pt-4">21 °C</h5>
-                  <span class="py-4">Sunny</span>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="row " id="myrow">
+        
         </div>
       </div>
       <!-- END OF RAGION -->
